<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:text="@string/zero" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnTenP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etAmount"
        android:layout_below="@+id/etAmount"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="27dp"
        android:onClick="onSubmitFixed"
        android:text="@string/tenP" />

    <Button
        android:id="@+id/btnFifteenP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnTenP"
        android:layout_alignBottom="@+id/btnTenP"
        android:layout_toRightOf="@+id/btnTenP"
        android:onClick="onSubmitFixed"
        android:text="@string/fifteenP" />

    <Button
        android:id="@+id/btnTwentyP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnFifteenP"
        android:layout_alignBottom="@+id/btnFifteenP"
        android:layout_toRightOf="@+id/btnFifteenP"
        android:onClick="onSubmitFixed"
        android:text="@string/twentyP" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/etAmount"
        android:layout_marginBottom="145dp"
        android:text="@string/zero" />

</RelativeLayout>